--- a/Qr Scanner/qrscanner.html
+++ b/Qr Scanner/qrscanner.html
@@ -30,11 +30,10 @@
 
   <script src="html5-qrcode.min.js"></script>
 
-  <script type="module" src="index.js"></script>
-
-  <script type="module">
+  <script>
     function onScanSuccess(qrCodeMessage) {
       sessionStorage.setItem("Id", qrCodeMessage);
+      window.location = "../authorize.html";
     }
 
     function onScanError(errorMessage) {
